[gd_scene load_steps=7 format=3 uid="uid://csowg2v7w6vdx"]

[ext_resource type="Script" path="res://ui/popup_new_name.gd" id="1_6gdru"]
[ext_resource type="Theme" uid="uid://bih0ootcxjn7o" path="res://ui/ui_theme.tres" id="1_n7pn2"]

[sub_resource type="InputEventKey" id="InputEventKey_e32v7"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_qq6ig"]
events = [SubResource("InputEventKey_e32v7")]

[sub_resource type="InputEventKey" id="InputEventKey_evr4g"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_pkxte"]
events = [SubResource("InputEventKey_evr4g")]

[node name="PopupNewName" type="Popup"]
size = Vector2i(180, 152)
visible = true
always_on_top = true
script = ExtResource("1_6gdru")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 180.0
offset_bottom = 67.0
theme = ExtResource("1_n7pn2")
theme_type_variation = &"PanelContainerTop"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "re/name..."

[node name="InputText" type="LineEdit" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "previous name"
max_length = 64

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonCancel" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 2
size_flags_horizontal = 3
shortcut_context = NodePath("../../../..")
shortcut = SubResource("Shortcut_qq6ig")
text = "cancel"

[node name="ButtonConfirm" type="Button" parent="PanelContainer/VBoxContainer/HFlowContainer" node_paths=PackedStringArray("shortcut_context")]
layout_mode = 2
size_flags_horizontal = 3
shortcut_context = NodePath("../../../..")
shortcut = SubResource("Shortcut_pkxte")
text = "confirm"
